# clang-tidy-plugin-examples

./: .gitignore  CMakeLists.txt  LICENSE  README.md  applyCheckInEveryCppRepositories.sh  installClang15.sh  installClang16.sh  renovate.json5  testAll.sh  testFramework.sh
.github/workflows/: testcpp.yml
include/CoveoClangTidyPlugins/: Utilities.h
repo-using-plugin/: CMakeLists.txt
repo-using-plugin/src/: CMakeLists.txt  code.cpp
src/: CMakeLists.txt
src/example/: AwesomePrefixCheck.cpp  CMakeLists.txt
src/replace_autoptr_by_std/: AutoPtrShared.cpp  AutoPtrShared.h  CGLArrayAutoPtrIsUniquePtr.h  CGLArrayAutoPtrStub.h  CGLAutoPtrIsUniquePtr.h  CGLAutoPtrStub.h  CMakeLists.txt  ExpectedTestCallsReplacementsNoAlias.cpp  ReplaceArrayAutoPtrByStdCheck.cpp  ReplaceAutoPtrAliasDefCheck.cpp  ReplaceAutoPtrByStdCheck.cpp  TestCallsReplacementsAlias.cpp  TestCallsReplacementsArrayAutoPtr.cpp  TestCallsReplacementsAutoPtr.cpp  functionDecl.cpp  testReplaceAutoPtrAlias.sh  test_alias.sh  test_arrayautoptr.sh  test_autoptr.sh
src/replace_by_get_executable_path/: CMakeLists.txt  ReplaceByGetExecutablePathCheck.cpp
src/replace_cglpath_by_std/: CGLPathIsStdfilesystemPath.h  CGLPathStub.h  CMakeLists.txt  ExpectedTestCallsReplacementsPath.cpp  ReplaceCGLPathByStd.cpp  TestCallsReplacementsPath.cpp  testReplacePath.sh
src/replace_smartptr_by_std/: CGLSmartPtrIsShared.h  CGLSmartPtrStub.h  CMakeLists.txt  ExpectedTestCallsReplacementsSmartPtr.cpp  FindRawPtrAssignmentToSmartCheck.cpp  ReplaceSmartPtrBySharedCheck.cpp  TestCallsReplacementsSmartPtr.cpp  TestFindRawPtrAssignmentToSmart.cpp  testReplaceSmartPtr.sh
